ADD Roboto font and overlap layout

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,21 @@ body{
   background: var(--color-primary);
   color: var(--color-light);
   font-size: 1rem;
-  font-family: sans-serif;
+  font-family: Roboto, ui-sans-serif, sans-serif;
+}
+h2,
+h1{
+  font-size: 88px;
+  font-size: 5.5rem;
+  font-weight: 900;
+  line-height: 0.8;
+  text-transform: uppercase;
+}
+.hero h1{
+  font-size: 1rem;
+  font-weight: 200;
+  font-weight: 300;
+  text-transform: initial;
 }
 footer,
 main,
@@ -67,11 +81,25 @@ nav{
 .menu-slideout{
   display: none;
 }
+.hero{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
 .hero .img{
   background: linear-gradient(var(--color-overlay), var(--color-overlay)), url(../img/canon-nytimes-takeover-jamie-foxx.mp4), url(../img/canon-imagina10n-takeover.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  width: 100%;
   height: 560px;
   margin: auto;
+}
+.hero .text{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  /* position: relative; */
+  /* top: -4rem; */
+  transform: translate(0, -4rem);
 }
