--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,13 @@ nav{
   max-width: 90rem;
   margin: auto;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
+a.btn,
 button{
-  padding: 0.75rem;
+  padding: 0.75rem 1.25rem;
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
@@ -50,8 +54,15 @@ button{
   border: none;
   border-radius: 0.5rem;
   box-shadow: inset 0.125rem 0.125rem 0.125rem var(--color-light), inset -0.125rem -0.125rem 0.125rem var(--color-primary);
-  transition: all ease-in-out 250ms;
+  transition: all ease-in-out 200ms;
+  color: var(--color-primary);
+  font-weight: 900;
+  font-size: 1.25rem;
 }
+a.btn{
+  text-decoration: none;
+}
+a.btn:hover,
 button:hover{
   box-shadow: none;
 }
@@ -80,6 +91,7 @@ nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
 }
 .menu-slideout{
   display: none;
@@ -105,7 +117,12 @@ nav{
   /* position: relative; */
   /* top: -4rem; */
   transform: translate(0, -4rem);
+  align-items: start;
 }
+.hero.alt .text{
+  gap: 1rem;
+}
+ul.buttons,
 ul.clients{
   display: flex;
   gap: 1rem;
@@ -115,4 +132,7 @@ ul.clients li img{
   max-width: 20vw;
   /* width: 20vw; */
   height: auto;
+}
+ul.buttons{
+  justify-content: initial;
 }
