--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ h1{
   font-weight: 200;
   font-weight: 300;
   text-transform: initial;
+  color: var(--color-light);
 }
 ul{
   list-style: none;
@@ -101,6 +102,7 @@ nav{
   flex-direction: column;
   gap: 0.5rem;
 }
+.hero.alt .img,
 .hero .img{
   background: linear-gradient(var(--color-overlay), var(--color-overlay)), url(../img/canon-nytimes-takeover-jamie-foxx.mp4), url(../img/canon-imagina10n-takeover.jpg);
   background-repeat: no-repeat;
@@ -119,8 +121,28 @@ nav{
   transform: translate(0, -4rem);
   align-items: start;
 }
-.hero.alt .text{
+.hero.award .img{
+  background: linear-gradient(var(--color-overlay), var(--color-overlay)), url(../img/ps_origin-seo-presentaion.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  height: 560px;
+  height: clamp(20rem,10vw,50rem);
+  margin: auto;
+}
+.hero.award .text{
   gap: 1rem;
+}
+.hero.craft .img{
+  background: linear-gradient(var(--color-overlay), var(--color-overlay)), url(../img/sp_CD+insert-1.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  height: 560px;
+  height: clamp(20rem,10vw,50rem);
+  margin: auto;
 }
 section.contact,
 ul.social,
