--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,33 @@ body{
   font-size: 1rem;
   font-family: Roboto, ui-sans-serif, sans-serif;
 }
+h4,
+h3,
 h2,
 h1{
-  font-size: 88px;
-  font-size: 5.5rem;
+  font-size: 2rem;
   font-weight: 900;
   line-height: 0.8;
   text-transform: uppercase;
+}
+h1{
+  padding-top: 4rem;
+  font-size: 2rem;
+  font-weight: 700;
+}
+h2{
+  font-size: 2rem;
+}
+h3{
+  font-size: 3rem;
+  text-transform: initial;
+  font-weight: 400;
+  top: -0.5rem;
+  position: relative;
+}
+h4{
+  font-size: 1rem;
+  padding-bottom: 0.5rem;
 }
 .hero h1{
   font-size: 1rem;
@@ -30,10 +50,23 @@ h1{
   font-weight: 300;
   text-transform: initial;
   color: var(--color-light);
+  padding-top: 0;
+}
+.hero h2{
+  font-size: 88px;
+  font-size: 5.5rem;
+}
+p{
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 ul{
   list-style: none;
 }
+img{
+  max-width: 100%;
+}
+.menu-slideout section,
 footer,
 main,
 nav{
@@ -44,6 +77,12 @@ nav{
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+a{
+  color: var(--color-light);
+}
+a:hover{
+  text-decoration: none;
 }
 a.btn,
 button{
@@ -57,8 +96,9 @@ button{
   box-shadow: inset 0.125rem 0.125rem 0.125rem var(--color-light), inset -0.125rem -0.125rem 0.125rem var(--color-primary);
   transition: all ease-in-out 200ms;
   color: var(--color-primary);
-  font-weight: 900;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
+  font-weight: 800;
+  cursor: pointer;
 }
 a.btn{
   text-decoration: none;
@@ -92,11 +132,54 @@ nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-items: top;
   flex-direction: row;
+  position: fixed;
+  z-index: 10;
+  width: calc(100% - 2rem);
+  background: var(--color-overlay);
 }
 .menu-slideout{
-  display: none;
+  height: 0;
+  overflow: hidden;
+  background: black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 11;
+  font-size: 1.5rem;
+  gap: 2rem;
+  transition: all ease-in-out 350ms;
 }
+.menu-slideout.open{
+  height: 35vh;
+}
+.menu-slideout section{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  height: 90%;
+}
+.menu-slideout .links{
+  margin-right: 6rem;
+  font-weight: 700;
+}
+.links{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+nav button{
+  z-index: 12;
+}
+main{
+  display: flex;
+  flex-direcion: column;
+  gap: 4rem;
+}
+section,
 .hero{
   display: flex;
   flex-direction: column;
@@ -112,14 +195,20 @@ nav{
   height: 560px;
   margin: auto;
 }
+section .text,
 .hero .text{
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  align-items: start;
+}
+section .text{
+  gap: 1rem;
+}
+.hero .text{
   /* position: relative; */
   /* top: -4rem; */
-  transform: translate(0, -4rem);
-  align-items: start;
+  transform: translate(0, -4rem);  
 }
 .hero.award .img{
   background: linear-gradient(var(--color-overlay), var(--color-overlay)), url(../img/ps_origin-seo-presentaion.jpg);
@@ -131,7 +220,8 @@ nav{
   height: clamp(20rem,10vw,50rem);
   margin: auto;
 }
-.hero.award .text{
+.hero.award .text,
+.text{
   gap: 1rem;
 }
 .hero.craft .img{
@@ -162,8 +252,13 @@ ul.buttons{
   justify-content: initial;
 }
 section.contact{
-  align-items: center;
+  /* align-items: center; */
 }
 p.legal{
   font-size: 0.85rem;
+}
+.steps{
+  display: flex;
+  gap: 2rem;
+  flex: 1 1 50%;
 }
